clusters/mlx-home-dev/home-assistant/home-assistant-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingress
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev-ha.thelemonsclan.com`) 
      services:
        - kind: Service
          name: home-assistant
          passHostHeader: true
          port: 8080
